added description to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "fcc-learn-npm-package-json",
 	"author": "Karelle Hofler",
 	"description": "Learning about npm with freeCodeCamp",
+	"keywords": ["freeCodeCamp", "tutorial", "backend", "npm"],
 	"dependencies": {
 		"express": "^4.14.0"
 	},
