--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"author": "Karelle Hofler",
 	"description": "Learning about npm with freeCodeCamp",
 	"keywords": ["freecodecamp", "tutorial", "backend", "npm"],
+	"license": "MIT",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
